--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src --out-dir dist --copy-files",
     "start": "node dist/server.js",
-    "dev": "nodemon  src/server.js --exec babel-node"
+    "dev": "nodemon  src/server.js --exec babel-node",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "@babel/node": "^7.12.6",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.6"
   }
 }
