--- a/.github/workflows/main.js.yml
+++ b/.github/workflows/main.js.yml
@@ -13,6 +13,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    services:
+      db:
+        image: mdillon/postgis:latest
+        env:
+          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+        ports:
+        - 5432:5432
 
     strategy:
       matrix:
@@ -27,4 +36,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm run test-ci
+
