--- a/.github/workflows/main.js.yml
+++ b/.github/workflows/main.js.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     services:
       db:
@@ -22,17 +21,11 @@ jobs:
           POSTGRES_PASSWORD: password
         ports:
         - 5432:5432
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 16
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
