--- a/.env.test
+++ b/.env.test
@@ -10,6 +10,6 @@ DB_PORT=5432
 DB_DIALECT=postgres
 DISABLE_DB_LOGS=true
 URL_INFO_NIT=https://pos-api.somosdonarturo.com/api/GetInfoFiscal
-TOKEN_INFO_NIT=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpYXQiOjE2MzA1OTg1MjAsImV4cCI6MTY5MzY3MDUyMH0.Z4u5HwTfI8ooE-iVwIBs5_n7yPv101lQSBw3xgfCEGM
+TOKEN_INFO_NIT='test-token'
 
-SENDGRID_API_KEY='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'
+SENDGRID_API_KEY='SG.test_key'
