--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "@babel/node": "^7.12.6",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "@faker-js/faker": "^7.6.0",
     "jest": "^28.1.3",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "supertest": "^6.3.0"
   }
 }
