agregar tests de usuarios

--- a/.env.test
+++ b/.env.test
@@ -13,3 +13,4 @@ URL_INFO_NIT=https://pos-api.somosdonarturo.com/api/GetInfoFiscal
 TOKEN_INFO_NIT='test-token'
 
 SENDGRID_API_KEY='SG.test_key'
+ENABLE_ERROR_LOGS=false
